fix profile bar

--- a/public/profile_bar.html
+++ b/public/profile_bar.html
@@ -1,5 +1,5 @@
-<nav id="id_nav_profile" class="navbar navbar-expand-md bg-secondary navbar-dark justify-content-between">
-    <a id="id_profile_home" class="navbar-brand nav-icon mr-4" href="index.php">
+<nav id="id_nav_profile" class="navbar navbar-expand-md bg-secondary navbar-dark justify-content-end">
+    <a id="id_profile_home" class="d-none navbar-brand nav-icon mr-4" href="index.php">
         <img src="img/logo-homeWT.png" width="30" height="30" class="d-inline-block align-top" alt="" />
     </a>
     <div id="id_dropdow_profile" class="dropdown d-none">
